error message added in login page

--- a/blogapp/templates/home.html
+++ b/blogapp/templates/home.html
@@ -99,7 +99,7 @@
 
                                                 <!-- Photo -->
                                                 <div
-                                                    class="d-flex justify-content-between border border-1 border-light rounded p-3 mt-3">
+                                                    class="d-flex justify-content-between border border-1 border-light rounded p-1">
                                                     <div>
                                                         <input type="file" name="image" accept="image/*" id="id_image"
                                                             style="opacity: 0; width: 0.1px; height: 0.1px; position: absolute;">
