--- a/blogapp/templates/includes/navbar.html
+++ b/blogapp/templates/includes/navbar.html
@@ -33,7 +33,7 @@
                             <form class="d-flex" action="{% url 'search-blogs' %}">
                                 <input name="search-input" style="min-height: 40px; min-width: 230px" type="text"
                                     class="input-group-text bg-gray border-0 rounded-pill" placeholder="Search" />
-                                <button type="submit">
+                                <button class="btn" type="submit">
                                     <i class="fas fa-search me-2 text-muted fs-3 ms-3 pt-1"></i>
                                 </button>
                             </form>
