--- a/blogapp/templates/home.html
+++ b/blogapp/templates/home.html
@@ -21,7 +21,7 @@
                             <img src="{{request.user.profile_pic.url}}" alt="avatar" class="rounded-circle me-2"
                                 style="width: 38px; height: 38px; object-fit: cover" />
                         </div>
-                        <input type="text" class="form-control rounded-pill border-0 bg-gray pointer" disabled
+                        <input type="text" class="form-control rounded-pill border-0 bg-gray pointer"
                             placeholder="What's on your mind, {{request.user}}?" data-bs-toggle="modal"
                             data-bs-target="#addModal" />
                     </div>
